mark end of metadata

--- a/62-00-Covariance.tex
+++ b/62-00-Covariance.tex
@@ -19,6 +19,8 @@
 %\pmkeywords{correlation coefficient}
 \pmrelated{Variance}
 
+\endmetadata
+
 % almost certainly you want these
 \usepackage{amssymb}
 \usepackage{amsmath}
