--- a/62-00-GeometricRandomVariable.tex
+++ b/62-00-GeometricRandomVariable.tex
@@ -17,6 +17,8 @@
 \pmclassification{msc}{92B05}
 \pmsynonym{geometric distribution}{GeometricRandomVariable}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
