--- a/62-00-Variance.tex
+++ b/62-00-Variance.tex
@@ -22,6 +22,8 @@
 \pmrelated{Covariance}
 \pmrelated{MeanSquareDeviation}
 
+\endmetadata
+
 % The standard font packages
 \usepackage{amssymb}
 \usepackage{amsmath}
