--- a/62-07-Percentile.tex
+++ b/62-07-Percentile.tex
@@ -20,6 +20,8 @@
 \pmdefines{lower quartile}
 \pmdefines{interquartile range}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
