--- a/62A01-HypothesisTesting.tex
+++ b/62A01-HypothesisTesting.tex
@@ -23,6 +23,8 @@
 \pmdefines{$\chi^2$ test}
 \pmdefines{p-value}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
