--- a/62D05-ClusterSampling.tex
+++ b/62D05-ClusterSampling.tex
@@ -18,6 +18,8 @@
 \pmdefines{second-stage cluster sampling}
 \pmdefines{subsampling}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
