--- a/62D05-StratifiedSampling.tex
+++ b/62D05-StratifiedSampling.tex
@@ -17,6 +17,8 @@
 \pmdefines{stratum}
 \pmdefines{stratum weight}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
