--- a/62E15-ExponentialRandomVariable.tex
+++ b/62E15-ExponentialRandomVariable.tex
@@ -17,6 +17,8 @@
 \pmclassification{msc}{05C15}
 \pmsynonym{exponential distribution}{ExponentialRandomVariable}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
