--- a/62E15-LognormalRandomVariable.tex
+++ b/62E15-LognormalRandomVariable.tex
@@ -14,6 +14,8 @@
 \pmclassification{msc}{62E15}
 \pmsynonym{lognormal distribution}{LognormalRandomVariable}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
