--- a/62E15-NegativeBinomialRandomVariable.tex
+++ b/62E15-NegativeBinomialRandomVariable.tex
@@ -16,6 +16,8 @@
 \pmclassification{msc}{18-00}
 \pmsynonym{negative binomial distribution}{NegativeBinomialRandomVariable}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
