--- a/62E15-PoissonRandomVariable.tex
+++ b/62E15-PoissonRandomVariable.tex
@@ -16,6 +16,8 @@
 \pmclassification{msc}{92-01}
 \pmsynonym{Poisson distribution}{PoissonRandomVariable}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
