--- a/62E15-PropertiesOfPoissonRandomVariables.tex
+++ b/62E15-PropertiesOfPoissonRandomVariables.tex
@@ -13,6 +13,8 @@
 \pmcomment{trigger rebuild}
 \pmclassification{msc}{62E15}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
