--- a/62E15-TableOfProbabilitiesOfStandardNormalDistribution.tex
+++ b/62E15-TableOfProbabilitiesOfStandardNormalDistribution.tex
@@ -16,6 +16,8 @@
 \pmclassification{msc}{60E05}
 \pmrelated{AreaUnderGaussianCurve}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
