--- a/62F12-ConsistentEstimator.tex
+++ b/62F12-ConsistentEstimator.tex
@@ -14,6 +14,8 @@
 \pmclassification{msc}{62F12}
 \pmdefines{consistent sequence of estimators}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
