--- a/62H05-JacobiDeterminant.tex
+++ b/62H05-JacobiDeterminant.tex
@@ -18,6 +18,8 @@
 \pmrelated{MultidimensionalGaussianIntegral}
 \pmrelated{ChangeOfVariablesInIntegralOnMathbbRn}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
