--- a/62H99-CovarianceMatrix.tex
+++ b/62H99-CovarianceMatrix.tex
@@ -14,6 +14,8 @@
 \pmclassification{msc}{62H99}
 \pmsynonym{variance covariance matrix}{CovarianceMatrix}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
