--- a/62J05-CholeskyDecomposition.tex
+++ b/62J05-CholeskyDecomposition.tex
@@ -20,6 +20,8 @@
 \pmrelated{SquareRootOfPositiveDefiniteMatrix}
 \pmdefines{Cholesky triangle}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
