--- a/62J10-MeanSquareError.tex
+++ b/62J10-MeanSquareError.tex
@@ -25,6 +25,8 @@
 \pmdefines{root mean square}
 \pmdefines{rms}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
