--- a/62K10-IncidenceStructure.tex
+++ b/62K10-IncidenceStructure.tex
@@ -34,6 +34,8 @@
 \pmdefines{affine plane}
 \pmdefines{finite affine plane}
 
+\endmetadata
+
 \usepackage{amssymb}
 % \usepackage{amsmath}
 % \usepackage{amsfonts}
