--- a/62K10-OrthogonalLatinSquares.tex
+++ b/62K10-OrthogonalLatinSquares.tex
@@ -18,6 +18,8 @@
 \pmsynonym{pairwise orthogonal Latin squares}{OrthogonalLatinSquares}
 \pmdefines{complete set of Latin squares}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
