--- a/62-00-RandomVariable.tex
+++ b/62-00-RandomVariable.tex
@@ -23,6 +23,8 @@
 \pmdefines{continuous random variable}
 \pmdefines{law of a random variable}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
