--- a/62-01-StatisticsOnPlanetMath.tex
+++ b/62-01-StatisticsOnPlanetMath.tex
@@ -13,6 +13,8 @@
 \pmcomment{trigger rebuild}
 \pmclassification{msc}{62-01}
 
+\endmetadata
+
 
 \begin{document}
 This entry is supposed to become a textbook on statistics -- or 
