--- a/62-07-ComparisonOfPythagoreanMeans.tex
+++ b/62-07-ComparisonOfPythagoreanMeans.tex
@@ -23,6 +23,8 @@
 \pmdefines{Pythagorean means}
 \pmdefines{Babylonian inequality chain}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
