--- a/62-07-OccamsRazor.tex
+++ b/62-07-OccamsRazor.tex
@@ -16,6 +16,8 @@
 \pmclassification{msc}{62A01}
 \pmsynonym{law of parsimony}{OccamsRazor}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
