--- a/62A01-Bias.tex
+++ b/62A01-Bias.tex
@@ -18,6 +18,8 @@
 \pmdefines{biased estimator}
 \pmdefines{asymptotically unbiased estimator}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
