--- a/62A01-FDistribution.tex
+++ b/62A01-FDistribution.tex
@@ -18,6 +18,8 @@
 \pmsynonym{central F distribution}{FDistribution}
 \pmdefines{non-central F distribution}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
