--- a/62A01-TDistribution.tex
+++ b/62A01-TDistribution.tex
@@ -15,6 +15,8 @@
 \pmsynonym{Student's $t$}{TDistribution}
 \pmsynonym{t-distribution}{TDistribution}
 
+\endmetadata
+
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[usenames]{color}
