--- a/62E15-ConditionalDistributionOfMultivariateNormalVariable.tex
+++ b/62E15-ConditionalDistributionOfMultivariateNormalVariable.tex
@@ -14,6 +14,8 @@
 \pmclassification{msc}{62E15}
 \pmclassification{msc}{60E05}
 
+\endmetadata
+
 % The standard font packages
 \usepackage{amssymb}
 \usepackage{amsmath}
