--- a/62E15-HypergeometricRandomVariable.tex
+++ b/62E15-HypergeometricRandomVariable.tex
@@ -15,6 +15,8 @@
 \pmclassification{msc}{81-00}
 \pmsynonym{hypergeometric distribution}{HypergeometricRandomVariable}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
