--- a/62E15-NormalRandomVariable.tex
+++ b/62E15-NormalRandomVariable.tex
@@ -23,6 +23,8 @@
 \pmrelated{AreaUnderGaussianCurve}
 \pmrelated{JointNormalDistribution}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
