--- a/62E15-ProofThatNormalDistributionIsADistribution.tex
+++ b/62E15-ProofThatNormalDistributionIsADistribution.tex
@@ -14,6 +14,8 @@
 \pmclassification{msc}{62E15}
 \pmrelated{AreaUnderGaussianCurve}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
