--- a/62E15-SumsOfNormalRandomVariablesNeedNotBeNormal.tex
+++ b/62E15-SumsOfNormalRandomVariablesNeedNotBeNormal.tex
@@ -17,6 +17,8 @@
 %\pmkeywords{independent}
 %\pmkeywords{covariance}
 
+\endmetadata
+
 % almost certainly you want these
 \usepackage{amssymb}
 \usepackage{amsmath}
