--- a/62E99-NoncentralChisquaredRandomVariable.tex
+++ b/62E99-NoncentralChisquaredRandomVariable.tex
@@ -16,6 +16,8 @@
 \pmsynonym{non-central chi-squared distribution}{NoncentralChisquaredRandomVariable}
 \pmdefines{non-centrality parameter}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
