--- a/62F10-LehmannScheffeTheorem.tex
+++ b/62F10-LehmannScheffeTheorem.tex
@@ -15,6 +15,8 @@
 \pmsynonym{Lehmann-Scheffe theorem}{LehmannScheffeTheorem}
 \pmdefines{complete statistic}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
