--- a/62H05-JointNormalDistribution.tex
+++ b/62H05-JointNormalDistribution.tex
@@ -18,6 +18,8 @@
 \pmdefines{jointly normal}
 \pmdefines{multivariate normal distribution}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
