--- a/62H10-MultivariateGammaFunctionrealvalued.tex
+++ b/62H10-MultivariateGammaFunctionrealvalued.tex
@@ -15,6 +15,8 @@
 %\pmkeywords{Gamma multivariate real}
 \pmdefines{gamma function (multivariate real)}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
