--- a/62H17-CramersV.tex
+++ b/62H17-CramersV.tex
@@ -16,6 +16,8 @@
 \pmsynonym{phi coefficient}{CramersV}
 \pmdefines{phi statistic}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
