--- a/62H20-OddsRatio.tex
+++ b/62H20-OddsRatio.tex
@@ -16,6 +16,8 @@
 \pmdefines{odds}
 \pmdefines{log-odds ratio}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
