--- a/62H99-FisherInformationMatrix.tex
+++ b/62H99-FisherInformationMatrix.tex
@@ -20,6 +20,8 @@
 \pmdefines{Cramer-Rao inequality}
 \pmdefines{Cramer-Rao lower bound}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
