--- a/62J05-GaussMarkovTheorem.tex
+++ b/62J05-GaussMarkovTheorem.tex
@@ -17,6 +17,8 @@
 \pmdefines{Gauss-Markov linear model}
 \pmdefines{best linear unbiased estimator}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
