--- a/62J12-ExponentialFamily.tex
+++ b/62J12-ExponentialFamily.tex
@@ -16,6 +16,8 @@
 \pmdefines{nuisance parameter}
 \pmdefines{natural parameter}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
