--- a/62K10-Design.tex
+++ b/62K10-Design.tex
@@ -28,6 +28,8 @@
 \pmdefines{tactical configuration}
 \pmdefines{balanced incomplete block design}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
