--- a/62M09-LevyProcess.tex
+++ b/62M09-LevyProcess.tex
@@ -14,6 +14,8 @@
 \pmclassification{msc}{62M09}
 \pmsynonym{Levy process}{LevyProcess}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
