--- a/62M10-MovingAverage.tex
+++ b/62M10-MovingAverage.tex
@@ -16,6 +16,8 @@
 \pmclassification{msc}{11-00}
 \pmclassification{msc}{91B84}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
