--- a/62N99-HazardFunction.tex
+++ b/62N99-HazardFunction.tex
@@ -15,6 +15,8 @@
 \pmclassification{msc}{62P05}
 \pmdefines{cumulative hazard function}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
